qafe-web-gwt/src/main/webapp/css/qafe.less
/* ... */
body .dataTable .gwt-CheckBox input {
    height: 16px;
    margin-top: 4px;
}
body .gwt-CheckBox input {
    margin-top: 8px;    
}




.dataTable td,
.lovFormHolder .dataTable td {
    border-bottom: 1px solid #E2E1E1 !important;    
}
.lovFormHolder .dataTable tr.highlighted td,
.dataTable tr.highlighted td {
    background: #6bdcfd !important;
}
.lovFormHolder .dataTable tr.selected td,
.lovFormHolder .dataTable tr.selected.highlighted td,
.dataTable tr.selected td,
.dataTable tr.selected.highlighted td {
    background: #E2E1E1 !important;
}
.dataTable td input,
.dataTable td .gwt-TextBox {
    background: transparent !important;
    border-color: transparent !important;
}













.UTSHighlightStatusCreated {
    background-color: #8CC833 !important;
}


/* additions 2013 01 22 */
body fieldset.contentPanelClass {
	border-radius: 0;
    border-width: 0;
    border-color: transparent;
    padding:2px;
   /* commennted by Binu. background: none repeat scroll 0 0 #E9E4DA; */
}
* body fieldset.contentPanelClass {
    padding: 2px 2px 2px 2px;
    margin-left: 5px;
	margin-right: 5px;
	margin-bottom:5px;
}
body fieldset.contentPanelClass table {
	background:#fff;
    margin-top:10px;
}
body fieldset.contentPanelClass table.headerTable {
    background: #7f7f7f; /* Added 20130201 to prevent invisible datagrid headers */
}
body fieldset.contentPanelClass table {
    width:100%;
}
body fieldset.contentPanelClass table table {
    margin-top:0px;
}

body fieldset.contentPanelClass > legend,
body fieldset.contentPanelClass legend {
    font-family: "proximanova", "proximanovacond";
    text-transform: uppercase;
    font-size: 14px;
    color: #d00018;
}

/* SDI mode specific styling added in PRE-158 */
.SDIBody {
  overflow-y: auto !important;
}

.SDIBody .spinner {
  left: auto !important;
}

.SDIMenu {
  border-left: 0 !important;
  border-right: 0 !important;
}

/* Fluid layout styling */
table.gwt-DecoratedPanel {
  height: 100% !important;
  position: relative !important;
}

table.gwt-DecoratedPanel,
table.gwt-DecoratedPanel > div,
table.gwt-DecoratedPanel table,
table.gwt-DecoratedPanel .gwt-ScrollTable {
  width: 100% !important;
}

table.gwt-DecoratedPanel table.gwt-PagingOptions {
  width: auto !important;
}

table.gwt-DecoratedPanel > div,
table.gwt-DecoratedPanel > table {
  overflow: hidden !important;
  position: relative !important;
  height: 100% !important;
}

div.gwt-DecoratedPanel > div {
  position: relative !important;
}

